--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.card-image {
+  max-width: 100%;
+  height: auto;
+}
+html{
+  background-color: black;
+}
+ul li {
+  list-style: none;
+}
+h1 {
+  margin-bottom: 0;
+  border: 0;
+}
+.title { 
+  margin-bottom: 0;
+  text-align: center;
+  background-color: black;
+  color: white;
+  padding: 2rem;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.background-black {
+  background-color: black;
+}
+.color-white {
+  color:white;
+}
+
+.input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search {
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin-right: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+.search::placeholder {
+  color: black;
+}
+
+.search:focus {
+  outline: none;
+}
+
+.card {
+  border: none;
+  background-color: black;
+}
+
+.card-title {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.card-text {
+  font-size: 16px;
+  font-weight: 300;
 }
